--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
                </div>
                 <div>
                     <a href="#" class="link">¿Olvidaste tu contraseña?</a>
-                
+
                 </div>
             </div>
             <div class="mt-5">
@@ -28,9 +28,9 @@
                         <i class="fas fa-spinner fa-spin"></i>
                     </div>
                 </button>
-                
 
-                <div id="error-messege" class="text-red-500 text-sm mt-2 hidden" >contraseña o usurio incorrecto</div> 
+
+                <div id="error-messege" class="text-red-500 text-sm mt-2 hidden" >contraseña o usurio incorrecto.</div>
             </div>
         </div>
     </div>
