--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<form action="#" method="post">
+<form>
     <div class="flex justify-center items-center h-screen bg-[#06345f]">
         <div class="w-96 p-6 shadow-lg bg-white rounded-md">
             <h1 class="text-3xl block text-center font-semibold"><i class="fa-solid fa-user"></i> Iniciar Sesión</h1>
